fixed goofy ahh horizontal scroll

--- a/webpage/css/front.css
+++ b/webpage/css/front.css
@@ -7,8 +7,17 @@
   padding: 2%;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 .main-content{
   text-align: center;
+}
+
+.figure{
+  padding: 0%;
+  border: 0cap;
 }
 
 .text {
